--- a/source/examples/C/Makefile
+++ b/source/examples/C/Makefile
@@ -1,9 +1,11 @@
 all: hwserver hwclient version
-hwserver:
-	gcc ./hwserver.c -o ./hwserver -lzmq
-hwclient:
-	gcc ./hwclient.c -o ./hwclient -lzmq
 version:
 	gcc ./version.c -o ./version -lzmq
+hwserver:
+	gcc ./hwserver.c -o ./hwserver -lzmq
+#end_hwserver
+hwclient:
+	gcc ./hwclient.c -o ./hwclient -lzmq
+#end_hwclient
 clean:
 	rm hwserver hwclient  version 
